--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fbd876">  <td>19/08/24 12:33:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="product_flow.verify_product()[pri:0, instance:website.testcase.product_flow@77caeb3e]">verify_product</td> 
-  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="d460ab">  <td>20/06/26 12:15:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="mozilla_headless_setlocation.verifylocation()[pri:0, instance:website.testcase.mozilla_headless_setlocation@614ddd49]">verifylocation</td> 
+  <td>main@1615056168</td>   <td></td> </tr>
 </table>
